--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <a target="_blank" href="https://x.com/MolemoMakhubu" style="--i:9;"><i class='bx bxl-twitter'></i></a>
                         <a target="_blank" href="https://www.instagram.com/molemo_makhubu/" style="--i:10;"><i class='bx bxl-instagram' ></i></a>
                     </div>
-                    <a href="Molemo Makhubu CV.pdf" download class="button">Download CV</a>
+                    <a href="Molemo Makhubu's CV.pdf" download class="button">Download CV</a>
                     <button type="submit" class="button2" onclick="openPopup()">Hire Me</button>
                     <div class="popup" id="popup">
                         <h4>Personal Details</h4>
